[package]
name = "syncstorage_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
axum = "0.7.7"
bytes = "1.8.0"
clap = { version = "4.5.21", features = ["derive"] }
futures-util = "0.3.31"
hyper = { version = "1.5.0", features = ["client", "http1"] }
hyper-util = { version = "0.1.10", features = ["client-legacy", "http1", "tokio"] }
http-body-util = "0.1.2"
tokio = { version = "1.41.0", features = ["macros", "rt"] }
tower = "0.5.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
