[package]
name = "syncstorage_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
axum = "0.7.7"
base64 = "0.22.1"
bytes = "1.8.0"
clap = { version = "4.5.21", features = ["derive"] }
futures-util = "0.3.31"
hawk = "5.0.1"
hkdf = "0.12.4"
hmac = "0.12.1"
hyper = { version = "1.5.0", features = ["client", "http1"] }
hyper-util = { version = "0.1.10", features = ["client-legacy", "http1", "tokio"] }
http-body-util = "0.1.2"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
sha2 = "0.10.8"
tokio = { version = "1.41.0", features = ["macros", "rt", "signal"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
urlencoding = "2.1.3"
